--- a/hw1/index.html
+++ b/hw1/index.html
@@ -13,16 +13,33 @@
       <td style="font-size: xx-large; padding-bottom: 3%; " ><b>ITIS</b></td>  <!--6 -->
       <td >256</td>
 
-      <td style="line-height: 1px; padding-bottom: 1%;">
-        <p style="text-align:center;">
-          <br> <input type="radio" checked> <!--три треугольника из радио-->
-           <br> <input type="radio" checked><input type="radio" checked>
-            <br> <input type="radio" checked><input type="radio" checked><input type="radio" checked> 
-        </p>
-
-          <br> <input type="radio" checked style="margin-left:15%;"> <input type="radio" checked style="margin-left:48%;">
-          <br> <input type="radio" checked style="margin-left:9%;"><input type="radio" checked> <input type="radio" checked style="margin-left:35%;"><input type="radio" checked>
-          <br> <input type="radio" checked style="margin-left:2%;"><input type="radio" checked><input type="radio" checked> <input type="radio" checked style="margin-left:23%;"><input type="radio" checked><input type="radio" checked>
+     <td>
+       <table border="0">
+            <table style="border-spacing: 11px 0px;"
+            <tr>
+                <p style="text-align:center;">
+                    <br> <input type="radio" checked> <!--три треугольника из радио-->
+                     <br> <input type="radio" checked><input type="radio" checked>
+                      <br> <input type="radio" checked><input type="radio" checked><input type="radio" checked> 
+                  </p>
+            </tr>
+            <tr>
+                <td>
+                    <p style="text-align:center;">
+                    <br> <input type="radio" checked> <!--три треугольника из радио-->
+                    <br> <input type="radio" checked><input type="radio" checked>
+                     <br> <input type="radio" checked><input type="radio" checked><input type="radio" checked> 
+                    </p>
+                    </td>
+                <td>
+                    <p style="text-align:center;">
+                    <br> <input type="radio" checked> <!--три треугольника из радио-->
+                    <br> <input type="radio" checked><input type="radio" checked>
+                    <br> <input type="radio" checked><input type="radio" checked><input type="radio" checked> 
+                    </p>
+                </td>
+            </tr>
+        </table>
       </td>
 
 
